Pushed bg-image down by setting margin-top to 96px (80+2x8) so that it's no longer hidden under the header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ dl, ol, ul {
     justify-content: center;
     position: relative;
     border-bottom: 8px solid #353628; 
+    margin-top: 96px;
 }
 
 #banner {
